# Roundtable-NLE

./: .clang-format  .gitignore  CHANGELOG.md  CLAUDE_IMPROVEMENT_PLAN.txt  CMakeLists.txt  FINAL_PUSH_FIXES.txt  FINAL_SUMMARY_v1.txt  LICENSE.txt  NOTICES.md  PARSER_PLAN.txt  README.md  REFRAME.txt  RENDER_GRAPH_PLAN.txt  SPINE_FALLBACK_PLAN.txt  SPINE_SWAP.txt  build.bat  build.ps1  create_setup.bat  create_setup.ps1  installer.iss  launch.bat  launch.vbs  launch_debug.bat  launch_with_validation.bat  publish-gui-mockup.html  publish-wpf.ps1  publish-wpf.vbs  setup.bat  setup.ps1  setup_appverif.ps1  swap_tabs.ps1  temp_insert_nikke.ps1  update_workspace.bat  update_workspace.ps1  vcpkg.json
src/: CMakeLists.txt  main.cpp  roundtable.rc.in  version.h
src/core/: CMakeLists.txt  ClipRenderers.h  Constants.h  CrashHandler.cpp  CrashHandler.h  HardwareDiagnostics.cpp  HardwareDiagnostics.h  Settings.h  ShutdownPhases.h  SrtIO.cpp  SrtIO.h  WorkerBreadcrumb.cpp  WorkerBreadcrumb.h  pch_core.h
src/core/ai/: ScriptMatcher.cpp  ScriptMatcher.h  Transcriber.cpp  Transcriber.h
src/core/command/: Command.h  CommandStack.cpp  CommandStack.h  CommandTypes.h  CompoundCommand.cpp  CompoundCommand.h  LambdaCommand.h
src/core/effects/: Blur.h  ChromaKey.cpp  ChromaKey.h  ColorCorrect.cpp  ColorCorrect.h  ColorGrading.cpp  ColorGrading.h  Effect.h  EffectStack.cpp  EffectStack.h  FillChannel.h  Flip.cpp  Flip.h  Glow.h  LUT.cpp  LUT.h  Letterbox.h  LumetriColor.cpp  LumetriColor.h  Ots.cpp  Ots.h  Sharpen.h  SimpleEffects.cpp  Transform2D.cpp  Transform2D.h  Vignette.h
src/core/engine/: EngineContracts.h  EngineServices.h  TimelineSnapshotBuilder.cpp  TimelineSnapshotBuilder.h
src/core/media/: AVSyncClock.cpp  AVSyncClock.h  AudioEngine.cpp  AudioEngine.h  AudioFile.cpp  AudioFile.h  AudioPlaybackService.cpp  AudioPlaybackService.h  AudioPlaybackServiceCache.cpp  AudioPlaybackServiceLoad.cpp  CacheCoordinator.cpp  CacheCoordinator.h  ChromaKeyEncoder.cpp  ChromaKeyEncoder.h  DiskFrameCache.cpp  DiskFrameCache.h  FrameCache.cpp  FrameCache.h  FrameClock.cpp  FrameClock.h  FramePresenter.cpp  FramePresenter.h  FrameProducer.cpp  FrameProducer.h  FrameScheduler.cpp  FrameScheduler.h  HWAlphaEncoder.cpp  HWAlphaEncoder.h  MediaPool.cpp  MediaPool.h  MediaPoolDecode.cpp  MediaPoolFrame.cpp  MediaPoolOpen.cpp  MediaPoolPerf.cpp  MediaPoolPrefetch.cpp  MediaPoolPrefetchConvert.cpp  MediaPoolPrefetchConvertGpu.cpp  MediaPoolPrefetchDecode.cpp  MediaPoolPrefetchGpu.h  MediaPoolPrefetchInternal.h  (+30 more)
src/core/project/: AssetDatabase.cpp  AssetDatabase.h  AutoSave.cpp  AutoSave.h  BinaryIO.h  ClipSerialization.cpp  ClipSerialization.h  Project.cpp  Project.h  ProjectSerializer.cpp  ProjectSerializer.h  ProjectSerializerIO.cpp  Settings.cpp  Settings.h
src/core/skeleton/: SkeletonTypes.h
src/core/spine/: AnimationCache.cpp  AnimationCache.h  AnimationVideoCache.cpp  AnimationVideoCache.h  ModelManager.cpp  ModelManager.h  ShotPreset.cpp  ShotPreset.h  SpineAnimation.cpp  SpineAnimation.h  SpineAtlas.cpp  SpineAtlas.h  SpineEngine.cpp  SpineEngine.h  SpinePrerenderer.cpp  SpinePrerenderer.h
src/core/timeline/: AdjustmentClip.cpp  AdjustmentClip.h  AudioClip.cpp  AudioClip.h  CaptionClip.cpp  CaptionClip.h  Clip.cpp  Clip.h  EditOperations.cpp  EditOperations.h  EditOperationsSelection.cpp  EditOperationsTrim.cpp  GraphicClip.cpp  (+34 more)
src/export/: AudioMixdown.cpp  AudioMixdown.h  CMakeLists.txt  Encoder.cpp  Encoder.h  FrameRenderer.cpp  FrameRenderer.h  Muxer.cpp  Muxer.h  PacketDemuxer.cpp  PacketDemuxer.h  RenderQueue.cpp  RenderQueue.h  SmartRenderAnalyzer.cpp  SmartRenderAnalyzer.h
src/gpu/: CMakeLists.txt  CompositeEngine.cpp  CompositeEngine.h  CompositeGpuSlot.h  CompositeGraphExecutor.cpp  CompositeGraphExecutor.h  CompositeService.cpp  CompositeService.h  CompositeServiceBlend.cpp  CompositeServiceBlend.h  CompositeServiceCpuFallback.cpp  CompositeServiceFrame.cpp  CompositeServiceFramePrewarm.cpp  CompositeServiceGpuOrchestration.cpp  CompositeServiceLayerBuild.cpp  CompositeServiceLayerBuild.h  CompositeServiceLayerBuildInternal.h  CompositeServiceLayerBuildVideo.cpp  CompositeServiceSpine.cpp  Compositor.cpp  Compositor.h  CompositorInit.cpp  EffectProcessor.cpp  EffectProcessor.h  GpuContext.cpp  GpuContext.h  GpuResourceManager.cpp  GpuResourceManager.h  GpuScheduler.cpp  GpuScheduler.h  GpuTextureCache.cpp  GpuTextureCache.h  GpuUploadManager.cpp  GpuUploadManager.h  GpuWorkSubmission.cpp  GpuWorkSubmission.h  ICompositor.h  Nv12Converter.cpp  Nv12Converter.h  Nv12ConverterConvert.cpp  (+18 more)
src/ui/: App.cpp  App.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindowMenus.cpp  MainWindowProject.cpp  MainWindowProjectHandlers.cpp  MainWindowProjectMisc.cpp  MainWindowProjectSet.cpp  MainWindowRecovery.cpp  MainWindowUI.cpp  MainWindowUIBuild.cpp  MainWindowUINav.cpp  MainWindowUIWorkspace.cpp  NoElideTabStyle.h  QtHelpers.cpp  QtHelpers.h  ShortcutManager.cpp  ShortcutManager.h  SplashScreen.cpp  SplashScreen.h  Theme.cpp  Theme.h  ThemePresets.cpp  ThemeStyleBuilder.h  ThemeStyleControls.cpp  ThemeStyleCore.cpp  ThemeStyleEditor.cpp  ThemeStyleViews.cpp  ThemeStylesheet.cpp  UiScale.cpp  UiScale.h  UpdateChecker.cpp  UpdateChecker.h  pch_ui.h
tests/: CMakeLists.txt  test_animation_cache.cpp  test_audio.cpp  test_audio_mixer.cpp  test_audio_preview_service.cpp  test_audio_sync.cpp  test_autosave.cpp  test_clips.cpp  test_command.cpp  test_composite_graph_executor.cpp  test_compositor.cpp  test_decoder.cpp  test_effects.cpp  test_engine_contracts.cpp  test_export.cpp  test_gpu_resource_manager.cpp  test_gpu_spine.cpp  test_history_panel.cpp  test_integration.cpp  test_keyframe.cpp  test_keyframe_editor.cpp  test_main_window.cpp  test_media_source_service.cpp  test_monitors.cpp  test_playback_scheduler.cpp  test_project.cpp  test_project_bin.cpp  test_properties.cpp  test_shot_composer.cpp  test_spine.cpp  test_text.cpp  test_timeline.cpp  test_timeline_edit.cpp  test_timeline_snapshot_builder.cpp  test_timeline_ui.cpp  test_transport.cpp  test_viewport.cpp  test_waveform.cpp
(+461 files in other folders)
